@@ -82,6 +82,8 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
   * Fix glibc235-hppa-lt.diff (restore ret0 across calls to CDISABLE) 
     from Randolph Chung.  (Closes: #326581)
   * Switch to gcc-4.0 on hppa.
+  * Add support for extra_pkg_install hooks for udeb packages.
+  * Add a symlink /lib64 -> /lib in libc6-udeb on amd64.
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
